# PriNCe

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  HANDOVER.md  HANDOVER_mkl_cupy.md  HANDOVER_photo_meson.md  README.md  V1_TO_V2.md  azure-pipelines.yml  debug_prince.py  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: conf.py  tutorial.rst
explore/: MATH_ANALYSIS.md  SUMMARY.md  bench_legacy_vs_toeplitz.py  bench_mkl_pass.py  bench_mkl_prod.py  profile_kernel_init.py  prototype_bc_toeplitz.py  prototype_diff_toeplitz.py
prince_cr/: cr_sources.py  data.py  decays.py  interaction_rates.py  photonfields.py
prince_cr/_deprecated/: __init__.py
prince_cr/cross_sections/: __init__.py  response.py
prince_cr/solvers/: __init__.py  propagation.py
prince_cr/tests/: test_propagation.py
src/prince_cr/: config.py  core.py  cosmology.py  cr_sources.py  data.py  decays.py  (+5 more)
tests/: _build_kernel_cache.py  conftest.py  test_cascade_bethe_heitler.py  test_cascade_factorization.py  test_cascade_kernels.py  test_cascade_opacity.py  test_config.py  test_core.py  test_cosmology.py  test_coupled_cascade.py  test_cr_sources.py  test_cross_sections_extra.py  test_csec.py  test_data_extra.py  test_data_models.py  test_decays.py  test_e2e_fluka.py  test_em_transport.py  test_etd2.py  test_explicit_decay_analytics.py  test_explicit_decay_vs_chain_reducer.py  test_fluka_loader.py  test_interaction_rates_extra.py  test_intrates.py  test_kernel_toeplitz.py  test_multi_rhs.py  test_partial_diff.py  test_phenom_relations.py  test_photonfields.py  test_propagation.py  test_propagation_extra.py  test_propagation_result.py  test_reduce_channels.py  test_solver_baseline.py  test_source_evolution.py  test_stencil_accuracy.py  test_tracking_species.py  test_util.py  test_version.py
(+31 files in other folders)
