[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prince_cr"
version = "0.7.0"
description = "Cosmic ray PRopagation Including Nuclear Cascade equations"
readme = "README.md"
license = { text = "BSD 3-Clause License" }
requires-python = ">=3.8"
authors = [
  { name = "Jonas Heinze" },
  { name = "Anatoli Fedynitch" }
]
maintainers = [
  { email = "afedynitch@gmail.com" }
]
urls = { Homepage = "https://github.com/joheinze/PriNCe", Download = "https://pypi.org/project/prince-cr" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Scientific/Engineering :: Physics",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: BSD License",
  "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)"
]
dependencies = [
  "scipy",
  "numpy",
  "tqdm",
  "h5py",
  "requests"
]
optional-dependencies = { test = ["pytest", "matplotlib"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prince_cr = ["data/particle_data.ppo"]

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q -ra --ff -n auto"
testpaths = ["tests"]
filterwarnings = ["error::FutureWarning", "error::DeprecationWarning"]

[tool.ruff]
line-length = 90
extend-ignore = ["E203"]

[tool.pydocstyle]
convention = "numpy"
